# KKBOT-PANEL-V2

./: .env.example  .gitignore  Makefile  README.md  deploy_panel_v2.py  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  RUNBOOK.md
go/: go.mod
legacy_v1/: .env.example  .env.polling.example  .env.release.example  .env.webhook.example  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py
legacy_v1/app/: __init__.py  background.py  bootstrap.py  container.py  log_context.py  runtime.py
legacy_v1/db/: database.py
legacy_v1/deploy/: run_polling.sh  run_webhook.sh
legacy_v1/docs/: DEPLOY.md
legacy_v1/handlers/: buy.py  payment_admin.py  payment_diagnostics.py  profile.py  referral.py  start.py
legacy_v1/keyboards/: builders.py
legacy_v1/middlewares/: callback_dedup.py  error_guard.py  request_context.py  start_dedup.py
legacy_v1/migrations/: 004_support_schema.sql
legacy_v1/scripts/: db_backup.py  db_restore_check.py  smoke_checks.py
legacy_v1/services/: admin_bulk.py  health.py  itpay.py  panel.py  payment_attention_resolver.py  payment_states.py  server_bootstrap.py  traffic_state.py  webhook.py
legacy_v1/tests/: test_admin_bulk.py  test_admin_referrals_top.py  test_buy_balance_payment.py  test_logging_context.py  test_logging_format.py  test_panel_multi_inbound.py  test_payment_attention.py  test_payment_lifecycle_v3.py  test_server_bootstrap.py  test_subscription_links.py  test_support_handlers.py  test_yookassa.py
legacy_v1/utils/: helpers.py  onboarding.py  support.py  templates.py
migrations/postgres/: 001_bootstrap.sql  004_referrals.sql  (+2 more)
src/: config.py
tests/: test_adaptive_database.py  test_antifraud_referrals.py  test_config.py  test_legacy_import.py  test_postgres_only_runtime.py  test_runtime_settings.py  test_v2_bootstrap_smoke.py  test_v2_business_services.py  test_v2_services_imports.py
tests_legacy/: test_admin_user_card_traffic_state.py  test_background_jobs.py  test_config_validation.py  test_operational.py  test_payment_attention_resolver.py  test_payment_flow.py  test_payment_hardening.py  test_payment_pending_operations.py  test_payment_provider_diagnostics.py  test_request_context_middleware.py  test_runtime_modes.py  test_telegram_stars.py  test_traffic_state.py
(+102 files in other folders)
