[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kkbot-panel"
version = "2.0.0"
description = "KKBOT PANEL V2.0: Telegram bot with PostgreSQL storage, SQLite one-time import, and mixed Python/Go tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.7.0",
  "aiohttp>=3.10.0",
  "asyncpg>=0.30.0",
  "boto3>=1.39.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
kkbot-v2 = "kkbot.__main__:main"
kkbot-migrate-legacy = "kkbot.tools.migrate_legacy:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/kkbot",
  "src/app",
  "src/db",
  "src/handlers",
  "src/keyboards",
  "src/middlewares",
  "src/services",
  "src/tariffs",
  "src/utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
